--- a/app/views/admin/components/show.html.erb
+++ b/app/views/admin/components/show.html.erb
@@ -5,13 +5,12 @@
     </div>
   </div>
   <div class="row mt-4 mb-5">
-
-    <div class="col-8">
+    <div class="col-md-8">
       <table class="table table-borderless">
         <tbody>
           <tr>
             <th>成分カテゴリー名</th>
-            <td><%#= @component.comp_category.name %></td>
+            <td><%= @component.comp_category.name %></td>
           </tr>
           <tr>
             <th>商品名</th>
