--- a/app/views/admin/comp_categories/edit.html.erb
+++ b/app/views/admin/comp_categories/edit.html.erb
@@ -2,7 +2,8 @@
 <div class="container">
   <div class="mt-4 mx-3 my-3 col-6">
     <h4 class="p-3 mb-5 w-50 text-center" style="color: #494949; background: #80aba9; border-left: solid 5px #2f4f4f;">成分カテゴリー編集</h4>
-    <%= form_with model: @comp_category, url: admin_comp_category_path(@comp_category), method: :patch, local: true do |f| %>
+      <%= form_with model: @comp_category, url: admin_comp_category_path(@comp_category), method: :patch, local: true do |f| %>
+      <%= render "layouts/error", model: f.object %>
     <div class="my-5">
       <b><%= f.label :成分カテゴリー名 %></b>
       <%= f.text_field :name, class: "mx-5" %>
