--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -5,28 +5,47 @@
        <div class="row">
         <div class="col-md-6">
         <%= form_with model:@item, url:admin_item_path(@item), local:true do |f| %>
+        <%= render "layouts/error", model: f.object %>
         <table class='table table-borderless'>
           <tr>
            <td><%= f.label :商品画像 ,class: "col-xs-3" %></td>
            <td><%= f.attachment_field :item_image, autofocus: true, autocomplete: "item_image" ,class: "col-xs-8"%></td>
           </tr>
           <tr>
+           <td><%= f.label :ジャンル ,class: "col-xs-3 fix" %></td>
+           <td><%= f.collection_select :item_category_id, @item_category, :id, :name,{:prompt => "選択してください"}, class:"form-control" %></td>
+          </tr>
+          <tr>
            <td><%= f.label :商品名 ,class: "col-xs-3" %></td>
            <td><%= f.text_field :name, autofocus: true, autocomplete: "name" ,class: "col-auto form-control form-control-md w-100"%></td>
+          </tr>
+          <tr>
+           <td><%= f.label :評価 ,class: "col-xs-3" %></td>
+           <td><div id="star"><%= f.hidden_field :rate, id: :review_star %></div></td>
+             <script>
+               $('#star').raty({
+                 size     : 36,
+                 starOff:  '<%= asset_path('star-off.png') %>',
+                 starOn : '<%= asset_path('star-on.png') %>',
+                 starHalf: '<%= asset_path('star-half.png') %>',
+                 scoreName: 'post[rate]',
+                 half: true,
+               });
+             </script>
           </tr>
           <tr>
            <td><%= f.label :商品説明 ,class: "col-xs-3" %></td>
            <td><%= f.text_area :explanation, autofocus: true, autocomplete: "explanation" ,class: "col-auto form-control form-control-md w-100"%></td>
           </tr>
           <tr>
-           <td><%= f.label :ジャンル ,class: "col-xs-3 fix" %></td>
-           <td><%= f.collection_select(:item_category_id, @item_category, :id, :name,:prompt => "選択してください") %></td>
+           <td><%= f.label :成分 ,class: "col-xs-3" %></td>
+           <td><%= f.text_area :component, size: "20x5", autofocus: true, autocomplete: "explanation" ,class: "col-auto form-control form-control-md w-100"%></td>
           </tr>
           <tr>
            <td><%= f.label :販売ステータス  ,class: "col-xs-3 fix" %></td>
            <td>
-            <%= f.radio_button :sale_status, :true %> 販売中
-            <%= f.radio_button :sale_status, :false %> 販売停止中
+            <%= f.radio_button :status, :true %> 販売中
+            <%= f.radio_button :status, :false %> 販売停止中
            </td>
           </tr>
           <tr>
