--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -2,13 +2,12 @@
   <div class="row mt-4 mb-3">
    <div class="d-flex justify-content-between w-100">
      <h4 class="p-3 mb-2 text-dark w-25 text-center" style="color: #494949; background: #80aba9; border-left: solid 5px #2f4f4f;">商品一覧</h4>
-     <h1>
-       <%= link_to new_admin_item_path, class: "text-right" do %>
-        <i class="fas fa-plus-circle text-info"></i>
-       <%end%>
-     </h1>
+     <h5>
+       <%= link_to "商品を追加する" ,new_admin_item_path, class: "btn btn-outline-success text-center" %>
+       <%= link_to "商品カテゴリーを追加する" ,admin_item_categories_path, class: "btn btn-outline-success text-center"%>
+     </h5>
    </div>
-    <table class="table table-hover mt-4">
+    <table class="table table-hover mt-4 mb-5">
       <thead>
         <tr class="thead" style="background-color: #bed3ca;">
           <th>商品ID</th>
@@ -23,7 +22,6 @@
             <td><%= attachment_image_tag item, :item_image , format: 'jpg', fallback: "no_image.jpg", size: "50x50" %></td>
             <td><%= link_to item.name,admin_item_path(item), class:"text-secondary" %></td>
             <td><%= item.item_category.name %></td>
-            <td><%= item.status %></td>
             <td>
               <% if item.status? %>
                 <p class="text-success">販売</p>
@@ -35,7 +33,6 @@
         <% end %>
       </tbody>
     </table>
-    <%= link_to "商品を追加する" ,new_admin_item_path %>
-    <%= link_to "商品カテゴリーを追加する" ,admin_item_categories_path %>
+    <div class="bt-5"><%= paginate @items %></div>
   </div>
 </div>
