--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -4,48 +4,51 @@
       <h4 class="p-3 mb-2 w-50 text-center" style="color: #494949; background: #80aba9; border-left: solid 5px #2f4f4f;">商品詳細</h4>
     </div>
   </div>
-  <div class="row mt-4 mb-5">
-    <div class="col-4">
-      <%= attachment_image_tag @item, :item_image , format: 'jpg', fallback: "no_image.jpg", size: "300x250" %>
+ <div class="card mb-3" style="max-width: 100%;">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <%= attachment_image_tag @item, :item_image , format: 'jpg', fallback: "no_image.jpg", style: "object-fit: cover; width: 100%; height: 100%;" %>
     </div>
-    <div class="col-8">
-      <table class="table table-borderless">
-        <tbody>
-          <tr>
-            <th>カテゴリー名</th>
-            <td><%= @item.item_category.name %></td>
-          </tr>
-          <tr>
-            <th>商品名</th>
-            <td><%= @item.name %></td>
-          </tr>
-          <tr>
-            <th>商品説明</th>
-            <td><%= @item.explanation %></td>
-          </tr>
-
-          <tr>
-            <th>成分</th>
-            <td><%= @item.component %></td>
-          </tr>
-          <tr>
-            <th>販売ステータス</th>
-            <td>
-              <% if @item.status? %>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">カテゴリー名</h5>
+        <p class="card-text"><%= @item.item_category.name %></p>
+        <h5 class="card-title">商品名</h5>
+        <p class="card-text"><%= @item.name %></p>
+         <h5 class="card-title">評価</h5>
+         <div id="star">
+          <p class="card-text"></p>
+          <span class="star mr-1" data-score="<%= @item.rate %>">
+          <!-- 評価javascript -->
+          <script>
+            $('.star').raty({
+              readOnly: true,
+              score: function() {
+                return $(this).attr('data-score');
+              },
+              path: '/assets/'
+            });
+          </script>
+          </div>
+        <h5 class="card-title">商品説明</h5>
+        <p class="card-text"><%= @item.explanation %></p>
+        <h5 class="card-title">成分</h5>
+        <p class="card-text"><%= @item.component %></p>
+        <h5 class="card-title">販売ステータス</h5>
+        <p class="card-text"><% if @item.status? %>
                 <div class="text-success">販売</div>
               <% else %>
                 <div class="text-secondary">廃盤</div>
-              <% end %>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+              <% end %></p>
+        <p class="card-text"><small class="text-muted"><%= @item.created_at%></small></p>
+      </div>
     </div>
   </div>
+</div>
   <div class="row mt-5">
-		<div class="col-4 offset-4">
-		  <div class="text-center">
-		    <%= link_to "編集する" ,edit_admin_item_path(@item), class: "btn btn-outline-success" %>
+		<div class="col-4 offset-4 mb-5">
+		  <div class="text-center mb-5">
+		    <%= link_to "編集する" ,edit_admin_item_path(@item), class: "btn btn-outline-success col-md-8" %>
 		  </div>
 		</div>
 	</div>
