--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,7 +3,7 @@
     <div class='col-md-8 offset-2'> 
       <!-- tr部分全てにかかったようになる -->
       <h4 class="p-3 mb-2 w-25 text-center" style="color: #494949; background: #80aba9; border-left: solid 5px #2f4f4f;">会員一覧</h4>
-      <table class='table table-hover mt-4'>
+      <table class='table table-hover mt-4 mb-5'>
         <tr class="" style="background-color: #bed3ca;">
           <td>会員ID</td>
           <td>氏名</td>
@@ -28,6 +28,6 @@
         </tbody>
       </table>
     </div>
-    <!--<div class="col-6 offset-3 text-center"><%#= paginate @user %></div>-->
+    <div class="mb-5"><%= paginate @users %></div>
   </div>
 </div>
