--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -36,7 +36,7 @@
         </tr>
         <tr>
           <td></td>
-          <td><%#= link_to "編集する", edit_admin_user_path(@customer.id), class: "btn btn-outline-success" %></td>
+          <td><%= link_to "編集する", edit_admin_user_path(@user.id), class: "btn btn-outline-success" %></td>
         </tr>
       </table>
     </div>
