--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#bc8f8f;">
     <div class="container">
-      <nav class="navbar-brand navbar-left header-logo">
+      <nav class="navbar-brand navbar-left header-logo text-black-50">
         <%= link_to root_path do %>CosmeComponent<% end %></nav>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -11,78 +11,64 @@
         <!-- 利用者がログインしている時 -->
         <% if user_signed_in? %>
           <li class="nav-item">
+            <%= link_to root_path do %>
+              <i class="fas fa-home text-black-50"> トップページ </i>
+            <% end %>
             <%= link_to user_path(current_user) do %>
-              <i class="fas fa-user-cog"> マイページ </i>
+              <i class="fas fa-user-cog text-black-50"> マイページ </i>
             <% end %>
           </li>
           <li class="nav-item">
             <%= link_to items_path do %>
-              <i class="fas fa-birthday-cake"> 商品一覧 </i>
+              <i class="fas fa-list text-black-50"> 商品一覧 </i>
             <% end %>
           </li>
           <li class="nav-item">
             <%= link_to components_path do %>
-              <i class="fas fa-cart-arrow-down"> 成分一覧 </i>
+              <i class="fas fa-list text-black-50"> 成分一覧 </i>
             <% end %>
           </li>
           <li class="nav-item">
             <%= link_to destroy_user_session_path, method: :delete do %>
-              <i class="fas fa-sign-out-alt"> ログアウト </i>
+              <i class="fas fa-sign-out-alt text-black-50"> ログアウト </i>
             <% end %>
           </li>
         <!-- 管理者がログインしている時 -->
         <% elsif admin_signed_in? %>
           <li class="nav-item">
             <%= link_to admin_users_path do %>
-              <i class="fas fa-users"> 利用者一覧 </i>
+              <i class="fas fa-users text-black-50"> 利用者一覧 </i>
             <% end %>
           </li>
           <li class="nav-item">
             <%= link_to admin_items_path do %>
-              <i class="fas fa-birthday-cake"> 商品一覧 </i>
+              <i class="fas fa-list text-black-50"> 商品一覧 </i>
             <% end %>
           </li>
           <li class="nav-item">
             <%= link_to admin_components_path do %>
-              <i class="fas fa-paperclip"> 成分一覧 </i>
+              <i class="fas fa-list text-black-50"> 成分一覧 </i>
             <% end %>
           </li>
           <li class="nav-item">
-            <%= link_to destroy_admin_session_path, method: :delete do %>
-              <i class="fas fa-sign-out-alt"> ログアウト </i>
+            <%= link_to destroy_admin_session_path, method: :DELETE do %>
+              <i class="fas fa-sign-out-alt text-black-50"> ログアウト </i>
             <% end %>
           </li>
         <!-- 利用者ログインしていない時 -->
-        <% elsif user_signed_in? %>
+        <% else user_signed_in? %>
           <li class="nav-item">
             <%= link_to root_path do %>
-              <i class="fas fa-home"> トップページ </i>
+              <i class="fas fa-home text-black-50"> トップページ </i>
             <% end %>
           <li class="nav-item">
-            <%= link_to new_customer_registration_path do %>
-              <i class="fas fa-pencil-alt"> 新規登録 </i>
-            <% end %>
-          </li>
-          <li class="nav-item">
-            <%= link_to new_customer_session_path do %>
-              <i class="fas fa-sign-in-alt"> ログイン </i>
-            <% end %>
-          </li>
-          <!-- 管理者ログインしていない時 -->
-          <% else admin_signed_in? %>
-          <li class="nav-item">
-            <%= link_to admin_root_path do %>
-              <i class="fas fa-home"> トップページ </i>
+            <%= link_to new_user_registration_path do %>
+              <i class="fas fa-pencil-alt text-black-50"> 新規登録 </i>
             <% end %>
           </li>
           <li class="nav-item">
-            <%= link_to new_admin_registration_path do %>
-              <i class="fas fa-pencil-alt"> 新規登録 </i>
-            <% end %>
-          </li>
-          <li class="nav-item">
-            <%= link_to new_admin_session_path do %>
-              <i class="fas fa-sign-in-alt"> ログイン </i>
+            <%= link_to new_user_session_path do %>
+              <i class="fas fa-sign-in-alt text-black-50"> ログイン </i>
             <% end %>
           </li>
         <% end %>
