--- a/app/views/users/components/index.html.erb
+++ b/app/views/users/components/index.html.erb
@@ -1,29 +1,32 @@
 <div class="container-fluid">
   <div class="row mt-5">
-    <div class="col-9 col-md-9">
-      <h3 class="p-3 mb-2 w-50 text-center" style="color: #bc8f8f; background: #8f6552; border-left: solid 5px #6c3524; border-bottom: solid 3px #7b5544;"><strong>成分一覧</strong>（全<%= @components.count %>件）</h3>
-      <div class="col-2 col-md-2">
+    <div class="col-md-2 ml-5">
       <!-- 利用者情報サイドバー  -->
       <%= render 'users/users/info', user: current_user %>
       <!-- ジャンル検索サイドバー  -->
+      <div class="mt-4">
       <%= render 'users/components/category', categories: @categories %>
+      </div>
     </div>
-      <% @components.each do |component| %>
+    <div class="col-md-8 ml-5">
+      <h3 class="p-3 mb-2 w-50 text-center" style="color: #bc8f8f; background: #8f6552; border-left: solid 5px #6c3524; border-bottom: solid 3px #7b5544;"><strong>成分一覧</strong>（全<%= @components.count %>件）</h3>
         <div class="item-box">
-          <table class="table table-borderless">
-            <tr>
-              <th><%= component.id %></th>
-            </tr>
-            <tr>
-              <th><%#= component.comp_categories.name %></th>
-            </tr>
-            <tr>
-              <th><%= link_to component.name.truncate(15), component_path(component), class:"text-secondary" %></th>
-            </tr>
+          <table class="table table-hover mt-4">
+            <thead style="background-color: #bed3ca;">
+              <th>カテゴリー名</th>
+              <th>成分名</th>
+              <th>成分説明</th>
+            </thead>
+            <tbody>
+              <% @components.each do |component| %>
+            <td><%= component.comp_category.name %></td>
+            <td><%= link_to component.name.truncate(15), component_path(component), class:"text-secondary" %></td>
+            <td><%= component.explanation.truncate(25) %></td>
+            </tbody>
+            <% end %>
           </table>
+          <%= paginate @components %>
         </div>
-      <% end %>
     </div>
-    <div class="col-6 offset-3 text-center text-dark" ><%#= paginate @items %></div>
   </div>
 </div>
