--- a/app/views/users/components/show.html.erb
+++ b/app/views/users/components/show.html.erb
@@ -1,21 +1,19 @@
-<div class="container px-5 px-sm-0">
+<div class="container-fluid">
   <div class="row mt-5 mb-5">
-    <div class="col-2 col-md-2">
+    <div class="col-md-2 ml-5">
       <!-- 利用者情報サイドバー  -->
       <%= render 'users/users/info', user: current_user %>
+      <!-- ジャンル検索サイドバー  -->
+      <div class="mt-4">
+      <%= render 'users/components/category', categories: @categories %>
+      </div>
     </div>
-    <div class="col-md-8">
-
+    <div class="col-md-8 offset-1 mt-5">
       <!-- 商品詳細 -->
       <div class="item-detail">
         <h3><strong><%= @component.name %></strong></h3>
-        <p><%= @component.explanation %></p>
+        <p class="mt-3"><%= @component.explanation %></p>
       </div>
-
-    </div>
-    <div class="col-md-2">
-      <!-- ジャンル検索サイドバー  -->
-      <%= render 'users/components/category', categories: @categories %>
     </div>
   </div>
 </div>
