--- a/app/views/users/items/index.html.erb
+++ b/app/views/users/items/index.html.erb
@@ -1,12 +1,14 @@
 <div class="container-fluid">
   <div class="row mt-5">
-    <div class="col-md-2 ml-3">
+    <div class="col-md-2 ml-5">
       <!-- 利用者情報サイドバー  -->
-      <%= render 'users/users/info', user: current_user, class: "mb-5"%>
+      <%= render 'users/users/info', user: current_user, class: "pb-5" %>
       <!-- ジャンル検索サイドバー  -->
-      <%= render 'users/items/category', categories: @categories %>
+      <div class="mt-4">
+      <%= render 'users/items/category', categories: @categories, class: "pt-5" %>
+      </div>
     </div>
-    <div class="col-md-6 ml-5 mr-4">
+    <div class="col-md-6 ml-3 mr-4 mb-5">
       <h3 class="p-3 mb-2 w-50 text-center" style="color: #bc8f8f; background: #8f6552; border-left: solid 5px #6c3524; border-bottom: solid 3px #7b5544;"><strong>商品一覧</strong>（全<%= @items.count %>件）</h3>
       <table class="table table-hover mt-4">
       <thead>
@@ -23,9 +25,8 @@
             <td><%= attachment_image_tag item, :item_image , format: 'jpg', fallback: "no_image.jpg", size: "50x50" %></td>
             <td><%= link_to item.name.truncate(15), item_path(item), class:"text-secondary" %></td>
             <td><%= item.item_category.name %></td>
-            <td><%= item.status %></td>
             <td>
-              <% if item.status? %>
+              <% if item.status == true %>
                 <p class="text-success">販売</p>
               <% else %>
                 <p class="text-secondary">廃盤</p>
@@ -35,6 +36,7 @@
         <% end %>
       </tbody>
     </table>
+    <div class="mb-5"><%= paginate @items %></div>
     </div>
     <div class="col-md-3 mt-5">
       <h2>ランキング</h2>
