--- a/app/views/users/items/show.html.erb
+++ b/app/views/users/items/show.html.erb
@@ -1,35 +1,69 @@
-<div class="container px-5 px-sm-0">
-  <div class="row mt-5 mb-5">
-    <div class="col-2 col-md-2">
+<div class="container-fluid">
+  <div class="row mt-5">
+    <div class="col-md-2 ml-5">
       <!-- 利用者情報サイドバー  -->
       <%= render 'users/users/info', user: current_user %>
       <!-- ジャンル検索サイドバー  -->
+      <div class="mt-5">
       <%= render 'users/items/category', categories: @categories %>
     </div>
-    <div class="col-md-8">
+    </div>
+    <div class="col-md-4 m-0 ml-4">
       <!-- 商品イメージ -->
-      <div class="item-image">
+      <div class="item-image mb-3">
         <%= attachment_image_tag @item, :item_image, format: 'jpg',  fallback: "no_image.jpg", size: "400x300" %>
-      </div>
-      <!-- 商品詳細 -->
-      <div class="item-detail">
-        <h3><strong><%= @item.name %></strong></h3>
-        <p id ="favorite-btn"><%= render 'users/favorites/favorite-btn', item: @item %>コメント件数：<%= @item.comments.count %></p>
-        <p><%= @item.explanation %></p>
-        <p><%= @item.component %></p>
-      </div>
+        <h4 class="mt-3"><%= @item.name %></h4>
+        <p id ="favorite-btn<%= @item.id %>"><%= render 'users/favorites/favorite-btn', item: @item %></p>
 
-      <!--非同期通信テンプレート-->
-      <div id= "comments">
-        <%= render 'users/comments/new', item: @item %>
-      </div>
-
-      <div>
-        <%= form_with model:[@item, @comment], data: {remote: true} do |f| %>
-          <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
-          <%= f.submit "送信する" %>
+        <!-- 星評価 -->
+        <div id="star">
+          <p class="card-text"></p>
+          <span class="star mr-1" data-score="<%= @item.rate %>">
+          <!-- 評価javascript -->
+          <script>
+            $('.star').raty({
+              readOnly: true,
+              score: function() {
+                return $(this).attr('data-score');
+              },
+              path: '/assets/'
+            });
+          </script>
+          </div>
+                <%= form_with model:[@item, @comment], data: {remote: true} do |f| %>
+        <%= render "layouts/error", model: f.object %>
+          <%= f.text_area :comment,size:'52x5', rows:'5',placeholder: "コメントをここに", class: "mt-3 form-control" %>
+          <div class="mt-2">
+          <%= f.submit "送信する", class: "btn btn-outline-success" %>
+          </div>
         <% end %>
+          <div>
+      <!--非同期通信テンプレート-->
+      <div class="d-flex p-2 bd-highlight">
+      <div id= "comments<%= @item.id %>">
+      <%= render 'users/comments/new', item: @item%>
+      </div>
+
+      </div>
+  </div>
       </div>
     </div>
-  </div>
+      <!-- 商品詳細 -->
+        <div class="col-md-5 m-0">
+        <div class="card">
+        <div class="card-body">
+        <h4 class="card-title">商品説明</h4>
+        <p class="card-text"><%= @item.explanation %></p>
+        <h4 class="card-title">成分</h4>
+        <p class="card-text"><%= @item.component %></p>
+        </div>
+      </div>
+      <h5 class="m-0 mt-3">化粧品表示名称検索</h5>
+      <p><small>気になる成分があれば、ご利用ください。</small></p>
+      <script async src="https://www.cosmetic-info.jp/api/jclnjs.php?ux=000000000000"></script><div id="cosmeticinfojpjclnsearch"></div>
+    </div>
+      </div>
 </div>
+</div>
+
+
