--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,51 +1,58 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-md-4 offset-4">
+<h2 class="text-center mb-3">Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label :メールアドレス %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
+  <div class="field mt-3">
+    <%= f.label :パスワード %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> 文字以上)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", class:"form-control" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="field mt-3">
+    <%= f.label :パスワード再確認 %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="field mt-3">
     <%= f.label :ニックネーム %><br />
-    <%= f.text_field :nickname, autocomplete: "nickname" %>
+    <%= f.text_field :nickname, autocomplete: "nickname", class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="field mt-3 flex-row">
     <%= f.label :誕生日 %><br />
-    <%= select :user, :birth_month, User.birth_months.keys.to_a, include_blank: true %>
-    <%= select :user, :birth_day, User.birth_days.keys.to_a, include_blank: true %>
+     <div class="row">
+      <div class="ml-3 mr-3"><%= select :user, :birth_month, User.birth_months.keys.to_a, {include_blank: true}, class:"form-control m-0", style:"width: 100px;" %></div>
+      <div><%= select :user, :birth_day, User.birth_days.keys.to_a, {include_blank: true}, class:"form-control m-0", style:"width: 100px;" %></div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :年齢 %><br />
-    <%= select :user, :age, User.ages.keys.to_a, include_blank: true %>
+  <div class="field mt-3">
+    <%= f.label :年齢, class: "" %><%= f.label :肌質, class: "offset-4" %><br />
+    <div class="row">
+    <%= select :user, :age, User.ages.keys.to_a, {include_blank: true}, class:"form-control ml-3 mr-3", style:"width: 130px;" %>
+    <%= select :user, :skin_type, User.skin_types.keys.to_a, {include_blank: true}, class:"form-control" , style:"width: 130px;"%>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :肌質 %><br />
-    <%= select :user, :skin_type, User.skin_types.keys.to_a, include_blank: true %>
-  </div>
 
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="actions mt-5 text-center">
+    <%= f.submit "Sign up", class: "col-md-12 btn btn-outline-success" %>
   </div>
 <% end %>
 
 <%= render "users/shared/links" %>
+
+</div>
+</div>
+<div>
