--- a/app/views/users/users/_info.html.erb
+++ b/app/views/users/users/_info.html.erb
@@ -1,5 +1,5 @@
 <table class='table'>
-  <tr><%= attachment_image_tag user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg" %></tr>
+  <tr class="center"><%= attachment_image_tag user, :profile_image, :fill, 200, 200, fallback: "no_image.jpg" %></tr>
   <tr>
 	  <th>name</th>
 	  <th><%= user.nickname %></th>
