--- a/app/views/users/users/check.html.erb
+++ b/app/views/users/users/check.html.erb
@@ -10,6 +10,6 @@
   </h3>
 </div>
 <div class="text-center">
-  <%= link_to "退会しない", users_path, class: "btn btn-outline-primary mx-2 col-2" %>
+  <%= link_to "退会しない", user_path, class: "btn btn-outline-primary mx-2 col-2" %>
   <%= link_to "退会する",  users_hide_path, method: :put, "data-confirm" => "本当に退会しますか?", class: "btn btn-outline-danger mx-2 col-2" %>
 </div>
