問い合わせ機能作成

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,6 @@
   <footer class="fixed-bottom mt-5">
     <p class="m-0 d-flex align-items-center justify-content-center text-black-50" style="background-color:#bc8f8f; height: 60px;">
       <%= link_to root_path do %>CosmeComponent<% end %>
+      <%= link_to inquiry_index_path do %>お問い合わせ<% end %>
     </p>
   </footer>
