--- a/app/views/inquiry/confirm.html.erb
+++ b/app/views/inquiry/confirm.html.erb
@@ -1,30 +1,42 @@
-<div class="page-header">
-  <h1>お問い合わせ</h1>
+<div class="container-fluid">
+  <div class="row mt-3">
+    <div class="col-md-4 offset-4 mb-5">
+      <div>
+        <h3 class="text-center mt-5 mb-3">お問い合わせ内容確認</h3>
+        </div>
+        <%= form_for @inquiry, :url => inquiry_thanks_path do |f| %>
+          <div class="card">
+            <div class="card-header">
+            <div class="text-center">名前</div>
+          </div>
+            <div class="card-body text-center">
+              <%= f.hidden_field :name, class: "mt-3 form-control" %>
+              <%= @inquiry.name %>
+            </div>
+          <div class="card-header">
+            <div class="text-center">メールアドレス</div>
+          </div>
+          <div class="card-body">
+            <div class="form-group text-center">
+              <%= f.hidden_field :email %>
+              <%= @inquiry.email %>
+            </div>
+          </div>
+          <div class="card-header">
+            <div class="text-center">お問い合わせ内容</div>
+          </div>
+          <div class="card-body">
+            <div class="form-group text-center">
+              <%= f.hidden_field :message %>
+              <%= simple_format(@inquiry.message) %>
+            </div>
+          </div>
+          
+        </div>
+        <div class="text-center mt-3">
+            <%= f.submit '送信', :class => 'col-md-5 btn btn-outline-primary' %>
+                  </div>
+          <% end %>
+    </div>
+  </div>
 </div>
-
-<%= form_for @inquiry, :url => inquiry_thanks_path do |f| %>
-  <table class="table">
-    <tr>
-      <th>名前</th>
-      <td>
-        <%= f.hidden_field :name %>
-        <%= @inquiry.name %>
-      </td>
-    </tr>
-    <tr>
-      <th>メールアドレス</th>
-      <td>
-        <%= f.hidden_field :email %>
-        <%= @inquiry.email %>
-      </td>
-    </tr>
-    <tr>
-      <th>お問い合わせ内容</th>
-      <td>
-        <%= f.hidden_field :message %>
-        <%= simple_format(@inquiry.message) %>
-      </td>
-    </tr>
-  </table>
-  <%= f.submit '送信', :class => 'btn btn-primary' %>
-<% end %>
