--- a/app/views/inquiry/index.html.erb
+++ b/app/views/inquiry/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-6 offset-3">
+  <div class="row mt-3">
+    <div class="col-md-4 offset-4 mb-5">
       <div class="form-group">
 　　　<%= form_for @inquiry, :url => inquiry_confirm_path do |f| %>
         <div class="page-header">
-          <h3 class="text-center">お問い合わせ</h3>
+          <h3 class="text-center mt-5">お問い合わせ</h3>
         </div>
           <% if @inquiry.errors.any? %>
             <div class="alert alert-danger" role="alert">
@@ -28,9 +28,11 @@
               <div class="text-center">お問い合わせ内容</div>
               <div><%= f.text_area :message, size:'52x5', class: "mt-3 form-control" %></div>
             </div>
-          <%= f.submit '確認', class: 'btn btn-primary' %>
-        <% end %>
-</div>
-</div>
-</div>
+            <div class="text-center mb-5">
+              <%= f.submit '確認', class: 'col-md-5 btn btn-outline-primary' %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
 </div>
