問い合わせ機能レイアウト

--- a/app/views/admin/item_categories/index.html.erb
+++ b/app/views/admin/item_categories/index.html.erb
@@ -6,8 +6,10 @@
   <div class="row">
     <div class="col-10 my-3">
       <%= form_with model: @item_category, url: admin_item_categories_path, local: true do |f| %>
-      <%= render "layouts/error", model: f.object %>
-      <div>
+      <div class="col-md-7">
+        <%= render "layouts/error", model: f.object %>
+      </div>
+      <div class="row">
         <%= f.label :商品カテゴリー名 %>
         <%= f.text_field :name, placeholder: "商品カテゴリー名", class: "mx-4" %>
         <%= f.submit "新規登録", class: "btn btn-outline-success col-2" %>
