--- a/app/views/admin/comp_categories/index.html.erb
+++ b/app/views/admin/comp_categories/index.html.erb
@@ -6,10 +6,14 @@
   <div class="row">
     <div class="col-10 my-3">
       <%= form_with model: @comp_category, url: admin_comp_categories_path, local: true do |f| %>
-        <%= render "layouts/error", model: f.object %>
-        <%= f.label :成分カテゴリー名 %>
-        <%= f.text_field :name, placeholder: "成分カテゴリー名", class: "mx-4" %>
-        <%= f.submit "新規登録", class: "btn btn-outline-success col-2" %>
+      　<div class="col-md-7">
+          <%= render "layouts/error", model: f.object %>
+        </div>
+        <div class="row">
+          <%= f.label :成分カテゴリー名 %>
+          <%= f.text_field :name, placeholder: "成分カテゴリー名", class: "mx-4" %>
+          <%= f.submit "新規登録", class: "btn btn-outline-success col-2" %>
+        </div>
       <% end %>
     </div>
     <div class="col-6 mb-3">
