--- a/app/views/inquiry/thanks.html.erb
+++ b/app/views/inquiry/thanks.html.erb
@@ -1,6 +1,12 @@
-<div class="page-header">
-  <h1>お問い合わせ</h1>
+<div class="container-fluid">
+  <div class="row mt-5">
+    <div class="col-md-4 offset-4 mt-5">
+      <div class="page-header">
+        <h1 class="text-center">お問い合わせ</h1>
+      </div>
+      <p class="text-center">
+       お問い合わせいただきありがとうございました。
+      </p>
+    </div>
+  </div>
 </div>
-<p>
-  お問い合わせいただきありがとうございました。
-</p>
