--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -46,8 +46,8 @@
   </div>
 
 
-  <div class="actions mt-5 text-center">
-    <%= f.submit "Sign up", class: "col-md-12 btn btn-outline-success" %>
+  <div class="actions mt-5 text-center mb-5">
+    <%= f.submit "Sign up", class: "col-md-12 btn btn-outline-success mb-5" %>
   </div>
 <% end %>
 
