--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,19 +15,19 @@
  */
  @import "bootstrap";
  
- /*ページネーション自体のデザイン*/
-.pagination>li>a {          
-  border: none;     /*枠線をなくす*/
-  color: #696969;   /*文字の色を変える*/
-}
+// .footer {
+//   height: 60px;
+//   background-color:#bc8f8f;
+//   justify-content: flex end;
+//   align-items: right;
+// }
+ 
+// .footer ul {
+//   list-style: none;
+//   // align-items: right;
+//   // justify-content: right;
+// }
 
-/* 表示しているページ番号のデザイン */
-.pagination>.active>a {     
-  background: #93c9ff;     /*背景の色を変える*/
-  border-radius: 15px;     /*角を丸くする*/
-}
-
-/*ホバー時のデザイン*/
-.pagination>li>a:hover {        
-  border-radius: 15px;    /*角を丸くする*/
-}
+// .footer li>:first-child {
+//   margin-center: auto;
+// }
