--- a/app/views/admin/components/show.html.erb
+++ b/app/views/admin/components/show.html.erb
@@ -1,37 +1,44 @@
 <div class="container">
   <div class="row mt-5 mb-4">
-    <div class="col-3 col-md-6">
+    <div class="col-md-4 offset-1">
       <h4 class="p-3 mb-2 w-50 text-center" style="color: #494949; background: #80aba9; border-left: solid 5px #2f4f4f;">成分詳細</h4>
     </div>
   </div>
   <div class="row mt-4 mb-5">
-    <div class="col-md-8">
-      <table class="table table-borderless">
-        <tbody>
-          <tr>
-            <th>成分カテゴリー名</th>
-            <td><%= @component.comp_category.name %></td>
-          </tr>
-          <tr>
-            <th>商品名</th>
-            <td><%= @component.name %></td>
-          </tr>
-          <tr>
-            <th>成分説明</th>
-            <td><%= @component.explanation %></td>
-          </tr>
-          <tr>
-            <th>ステータス</th>
-            <td>
-              <% if @component.status? %>
-                <div class="text-success">現在使用可能</div>
-              <% else %>
-                <div class="text-secondary">現在使用不可</div>
-              <% end %>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="col-10 offset-1 mb-5">
+      <!-- 商品詳細 -->
+      <div class="card">
+        <div class="card-header">
+          <h5><strong>成分カテゴリー名</strong></h5>
+        </div>
+        <div class="card-body">
+          <p class="mt-3"><%= @component.comp_category.name %></p>
+        </div>
+        <div class="card-header">
+          <h5><strong>成分名</strong></h5>
+        </div>
+        <div class="card-body">
+          <p class="mt-3"><%= @component.name %></p>
+        </div>
+        <div class="card-header">
+          <h5><strong>成分説明</strong></h5>
+        </div>
+        <div class="card-body">
+          <p class="mt-3"><%= @component.explanation %></p>
+        </div>
+        <div class="card-header">
+          <h5><strong>成分ステータス</strong></h5>
+        </div>
+        <div class="card-body">
+          <p class="mt-3">
+            <% if @component.status? %>
+              <div class="text-success">現在使用可能</div>
+            <% else %>
+              <div class="text-secondary">現在使用不可</div>
+            <% end %>
+          </p>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row mt-5">
