--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,44 +1,41 @@
 <div class='container px-5 px-sm-0'>
   <div class='row mb-3 mt-4'>
-    <div class='col-md-8'>
+    <div class='col-md-6 offset-3'>
       <!-- tr部分全てにかかったようになる -->
       <h4 class="p-3 mb-2 w-50 text-center" style="color: #494949; background: #80aba9; border-left: solid 5px #2f4f4f;"><%= @user.nickname %>さんの会員詳細</h4>
-      <table class='table table-borderless'>
-        <tr>
-          <td>会員ID</td>
-          <td><%= @user.id %></td>
-        </tr>
-        <tr>
-          <td>ニックネーム</td>
-          <td><%= @user.nickname %></td>
-        </tr>
-        <tr>
-          <td>お誕生日</td>
-          <td><%= @user.birth_month %><%= @user.birth_day %></td>
-        </tr>
-        <tr>
-          <td>年齢</td>
-          <td><%= @user.age %></td>
-        </tr>
-        <tr>
-          <td>肌質</td>
-          <td><%= @user.skin_type %></td>
-        </tr>
-        <tr>
-          <td>会員ステータス</td>
-          <td>
-            <% if @user.is_deleted == true%>
+      <div class='card'>
+        <div class="card-header">
+          会員ID　ネックネーム
+        </div>
+        <div class="card-body">
+          <%= @user.id %>　<%= @user.nickname %>
+        </div>
+        <div class="card-header">
+          お誕生日　年代
+        </div>
+        <div class="card-body">
+          <%= @user.birth_month %><%= @user.birth_day %>　<%= @user.age %>
+        </div>
+        <div class="card-header">
+          肌質
+        </div>
+        <div class="card-body">
+          <%= @user.skin_type %>
+        </div>
+        <div class="card-header">
+          会員ステータス
+        </div>
+        <div class="card-body">
+           <% if @user.is_deleted == true%>
               <p class="text-secondary">退会済</p>
             <% else %>
               <p class="text-success">有効</p>
             <% end %>
-          </td>
-        </tr>
-        <tr>
-          <td></td>
-          <td><%= link_to "編集する", edit_admin_user_path(@user.id), class: "btn btn-outline-success" %></td>
-        </tr>
-      </table>
+        </div>
+      </div>
+      <div class="mt-3 text-center mb-5">
+          <%= link_to "編集する", edit_admin_user_path(@user.id), class: "btn btn-outline-success col-md-5 mb-4" %>
+      </div>
     </div>
   </div>
 </div>
