--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,9 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#bc8f8f;">
     <div class="container">
-      <nav class="navbar-brand navbar-left header-logo text-black-50">
-        <%= link_to root_path do %>CosmeComponent<% end %></nav>
+      <nav class="navbar-brand navbar-left header-logo ">
+          <%= link_to root_path, class: 'text-black-50' do %>CosmeComponent<% end %>
+      </nav>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
