--- a/app/views/users/homes/top.html.erb
+++ b/app/views/users/homes/top.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid mb-5">
 <!-- 利用者がログインしている時 -->
   <% if user_signed_in? %>
     <div class="row mt-5">
@@ -12,29 +12,31 @@
            <%= form_with url:search_path, method: :get, local: true do |f| %>
               <div class="form-group">
                 <%= f.label :keywaord, '商品・成分名検索', class: 'form-label' %>
-                <%= f.text_field :keyword, class: 'form-control' %>
+                <small>(商品、成分どちらかを入力してください)</small>
+                <%= f.text_field :keyword, class: 'form-control col-md-10' %>
               </div>
-              
+
               <!-- <input id="page_name" name='keyword' size="30" type="text" /> -->
               <div class="form-group">
                 <%= f.label :comp_keyword, '成分を除外して商品検索', class: 'form-label' %>
-                <%= f.text_field :comp_keyword, class: 'form-control' %>
+                <small>(除外したい成分名の前に-をつけてください)</small>
+                <%= f.text_field :comp_keyword, class: 'form-control col-md-10' %>
               </div>
               <div class="form-group">
-                <%= f.submit 'search' %>
+                <%= f.submit 'search',class: 'btn btn-outline-primary col-md-5 mb-5' %>
               </div>
            <% end %>
         </div>
         <div class ="mt-3">
-          <h3>化粧品表示名称検索</h3>
+          <h5>化粧品表示名称検索</h5>
             <script async src="https://www.cosmetic-info.jp/api/jclnjs.php?ux=000000000000"></script><div id="cosmeticinfojpjclnsearch"></div>
         </div>
         <div class ="mt-3">
-          <h3>医薬部外品添加物検索</h3>
+          <h5>医薬部外品添加物検索</h5>
             <script async src="https://www.cosmetic-info.jp/api/jsqijs.php?ux=000000000000"></script><div id="cosmeticinfojpjsqisearch"></div>
         </div>
         <div class ="mt-3">
-          <h3>原料検索</h3>
+          <h5>原料検索</h5>
             <script async src="https://www.cosmetic-info.jp/api/matejs.php?ux=000000000000"></script><div id="cosmeticinfojpmatesearch"></div>
         </div>
         <div class="mb-5">
@@ -73,6 +75,6 @@
           <%= link_to "Log in" ,new_user_session_path, class: "col-md-5 mt-2 btn btn-outline-primary text-center" %>
         </div>
       </div>
-    </div>  
+    </div>
   <% end %>
 </div>
