レイアウト微調整

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -33,6 +33,6 @@
         <% end %>
       </tbody>
     </table>
-    <div class="bt-5"><%= paginate @items %></div>
+    <div class="mb-5"><%= paginate @items %></div>
   </div>
 </div>
