星評価修正

--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -21,13 +21,13 @@
           <span class="star mr-1" data-score="<%= @item.rate %>">
           <!-- 評価javascript -->
           <script>
-            $('.star').raty({
+            $(".star").raty({
 
               readOnly: true,
               score: function() {
-                return $(this).attr('data-score');
+                return $(this).attr("data-score");
               },
-              path: '/assets/'
+              path: "/assets/"
             });
           </script>
           </div>
