星評価修正

--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -22,6 +22,9 @@
             <!-- 評価javascript -->
               <script>
                 $(".star").raty({
+                  starOff:  '<%= asset_path('star-off.png') %>',
+                  starOn : '<%= asset_path('star-on.png') %>',
+                  starHalf: '<%= asset_path('star-half.png') %>',
                   readOnly: true,
                   score: function() {
                     return $(this).attr("data-score");
