レイアウト調整

--- a/app/views/users/comp_categories/index.html.erb
+++ b/app/views/users/comp_categories/index.html.erb
@@ -1,13 +1,13 @@
 <div class="container-fluid">
-  <div class="row mt-5">
+  <div class="row mt-5 mb-5">
     <div class="col-2 col-md-2 ml-5">
         <!-- ジャンル検索サイドバー  -->
         <%= render 'users/users/info', user: current_user %>
-      <div class="mt-4">
+      <div class="mt-4 mb-5">
         <%= render 'users/components/category', categories: @categories %>
       </div>
     </div>
-    <div class="col-9 col-md-9 ml-5">
+    <div class="col-9 col-md-9 ml-5 ">
       <h3 class="p-3 mb-2 w-50 text-center" style="color: #bc8f8f; background: #8f6552; border-left: solid 5px #6c3524; border-bottom: solid 3px #7b5544;"><strong>成分一覧</strong>（全<%= @all_components.count %>件）</h3>
         <div>
           <table class="table table-hover mt-4">
@@ -38,6 +38,6 @@
           </table>
         </div>
       </div>
-    <div class="col-6 offset-3 text-center text-dark" ><%= paginate @components %></div>
+    <div class="col-6 offset-3 mt-3 mb-5 text-center text-dark" ><%= paginate @components %></div>
   </div>
 </div>
