--- a/app/views/users/item_categories/index.html.erb
+++ b/app/views/users/item_categories/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col-2 col-md-2 ml-5">
       <!-- ジャンル検索サイドバー  -->
         <%= render 'users/users/info', user: current_user %>
-      <div class="mt-3">
+      <div class="mt-3 mb-5">
         <%= render 'users/items/category', categories: @categories %>
       </div>
     </div>
