--- a/app/views/users/items/index.html.erb
+++ b/app/views/users/items/index.html.erb
@@ -4,7 +4,7 @@
       <!-- 利用者情報サイドバー  -->
       <%= render 'users/users/info', user: current_user, class: "pb-5" %>
       <!-- ジャンル検索サイドバー  -->
-      <div class="mt-4">
+      <div class="mt-4 mb-5">
       <%= render 'users/items/category', categories: @categories, class: "pt-5" %>
       </div>
     </div>
