--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -6,7 +6,7 @@
   <div class="row my-3">
     <h4 class="mx-2 col-md-3"><strong>登録情報</strong></h4>
     <%= link_to "編集する", edit_user_path(current_user), method: :get, class: "col-1 btn btn-outline-success mx-2 mr-5" %>
-    <h4 class="mx-2 col-md-5 ml-5"><strong>お気に入り商品</strong></h4>
+    <h4 class="mx-2 col-md-5 ml-5 mb-5"><strong>お気に入り商品</strong></h4>
   </div>
   <div class="row my-2">
     <table class="table table-bordered table-hover col-md-5">
