--- a/app/views/users/item_categories/index.html.erb
+++ b/app/views/users/item_categories/index.html.erb
@@ -1,13 +1,13 @@
 <div class="container-fluid">
   <div class="row mt-5">
-    <div class="col-2 col-md-2 ml-5">
+    <div class="col-2 col-md-2 ml-5 mb-5">
       <!-- ジャンル検索サイドバー  -->
         <%= render 'users/users/info', user: current_user %>
       <div class="mt-3 mb-5">
         <%= render 'users/items/category', categories: @categories %>
       </div>
     </div>
-    <div class="col-md-8 ">
+    <div class="col-md-8 mb-5">
       <h3 class="p-3 mb-2 w-50 text-center" style="color: #bc8f8f; background: #8f6552; border-left: solid 5px #6c3524; border-bottom: solid 3px #7b5544;"><strong>商品一覧</strong>（全<%= @all_items.count %>件）</h3>
         <table class="table table-hover mt-4">
           <thead>
