レイアウト調整

--- a/app/views/users/items/show.html.erb
+++ b/app/views/users/items/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row mt-5">
-    <div class="col-md-2 ml-5 mb-">
+    <div class="col-md-2 ml-5 mb-5">
       <!-- 利用者情報サイドバー  -->
         <%= render 'users/users/info', user: current_user %>
       <!-- ジャンル検索サイドバー  -->
