商品一覧・詳細修正

--- a/app/views/users/items/index.html.erb
+++ b/app/views/users/items/index.html.erb
@@ -39,7 +39,7 @@
     <div class="mb-5"><%= paginate @items %></div>
     </div>
     <div class="col-md-3 mt-5">
-      <h2>ランキング</h2>
+      <h3>総合ランキング</h3>
       <table class= "table table-hover">
         <% @rank_items.each do |item| %>
           <tr>
