--- a/app/views/users/users/_info.html.erb
+++ b/app/views/users/users/_info.html.erb
@@ -1,7 +1,9 @@
 <table class='table'>
   <tr class="center"><%= attachment_image_tag user, :profile_image, :fill, 200, 200, fallback: "no_image.jpg" %></tr>
   <tr>
-	  <th>name</th>
+	  <th>ニックネーム</th>
+  </tr>
+  <tr>
 	  <th><%= user.nickname %></th>
   </tr>
 </table>
