--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -47,8 +47,8 @@
             <tr class="thead" style="background-color: #bed3ca;">
               <th>商品ID</th>
               <th>商品名</th>
-              <th>商品カテゴリー</th>
-              <th>ステータス</th>
+              <th>商品のカテゴリー</th>
+              <th>販売ステータス</th>
             </tr>
           </thead>
         <tbody>
