レイアウト修正

--- a/app/views/admin/comp_categories/index.html.erb
+++ b/app/views/admin/comp_categories/index.html.erb
@@ -1,7 +1,7 @@
 <!-- 成分カテゴリー編集画面-->
 <div class="container">
   <div class="row mt-3">
-    <h4 class="p-3 mb-2 w-50 text-center" style="color: #494949; background: #80aba9; border-left: solid 5px #2f4f4f;">成分カテゴリー一覧・追加</h4>
+    <h4 class="p-3 mb-2 w-50 text-center" style="color: #494949; background: #FFF8DC;">成分カテゴリー一覧・追加</h4>
   </div>
   <div class="row">
     <div class="col-10 my-3">
