--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#bc8f8f;">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#33CC99;">
     <div class="container">
       <nav class="navbar-brand navbar-left header-logo ">
           <%= link_to root_path, class: 'text-black-50' do %>CosmeComponent<% end %>
