--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
   <footer class="fixed-bottom mt-5">
-    <div class="m-0 d-flex justify-content-between align-items-center" style="background-color:#bc8f8f; height: 60px;">
+    <div class="m-0 d-flex justify-content-between align-items-center" style="background-color:#33CC99; height: 60px;">
       <span class="text-black-50 ml-5">プライバシポリシー</span>
       <span class=""><%= link_to root_path, class: 'text-black-50' do %>CosmeComponent<% end %></span>
       <span class="mr-5"><%= link_to inquiry_index_path, class: 'text-black-50 justify-content-right' do %>お問い合わせ<% end %></span>
